# estrutura_workshop

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
data/output/: output.xlsx
docs/: index.md
search/: search_index.json
src/app/: main.py
src/app/pipeline/: __init__.py  extract.py  load.py  transform.py
tests/: __init__.py  test_pipeline.py
